<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Basic Operations</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="sub">Subtract</string>
    <string name="mul">Multiply</string>
    <string name="divide">Divide</string>
    <string name="answer"></string>
    <string name="input1">Enter a number</string>
    <string name="input2">Enter another number</string>

</resources>
