<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.basicoperations.MainActivity" >

    <EditText
        android:id="@+id/a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="164dp"
        android:ems="10"
        android:hint="@string/input1"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/a"
        android:layout_below="@+id/a"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/input2"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/add"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/b"
        android:layout_below="@+id/b"
        android:layout_marginTop="39dp"
        android:text="@string/add" />

    <Button
        android:id="@+id/mul"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/add"
        android:layout_alignParentBottom="true"
        android:text="@string/mul" />

    <Button
        android:id="@+id/div"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/mul"
        android:layout_alignBottom="@+id/mul"
        android:layout_toRightOf="@+id/b"
        android:text="@string/divide" />

    <Button
        android:id="@+id/sub"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/add"
        android:layout_alignBottom="@+id/add"
        android:layout_alignRight="@+id/div"
        android:text="@string/sub" />

    <TextView
        android:id="@+id/op"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mul"
        android:layout_toRightOf="@+id/mul"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
